# pg-sync-guard

./: .gitignore  README.md  go.mod  main.py  pyproject.toml
cmd/syncguard-cli/: main.go
dashboard/: README.md  app.py
dashboard/.streamlit/: secrets.toml.example
docs/: BACKLOG.md  CONTROL_PLANE.md  PG_EXTENSION.md  REQUIRED_GRANTS.md
examples/: validate_one_table.py
internal/compare/: compare.go  compare_test.go
internal/config/: config.go
internal/consistency/: watermark.go  watermark_test.go
internal/controlplane/: controlplane.go
internal/db/: connect.go
internal/extension/: catalog.go
internal/repairplan/: apply.go  repairplan.go  repairplan_test.go
internal/report/: text.go
pg_sync_guard/: Cargo.toml  pg_sync_guard.control
pg_sync_guard/src/: lib.rs
pg_sync_guard/tests/pg_regress/sql/: setup.sql
sync_guard/: __init__.py  control_plane.py  exceptions.py  hash_queries.py  schema.py  validator.py
