[project]
name = "pg-sync-guard"
version = "0.1.0"
description = "Validate data consistency between PostgreSQL Logical Replication Publisher and Subscriber"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "asyncpg>=0.29.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sync_guard"]

[tool.hatch.build.targets.sdist]
include = ["sync_guard"]
